# cpp_baseline

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
source/: main.cpp
